--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_analytics: ^6.0.0
   dotted_line: ^2.0.1
+  flutter_contact: ^0.6.1
+  flutter_datetime_picker: ^1.4.0
+  shared_preferences: ^0.5.10
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
