--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,15 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_analytics: ^6.0.0
   dotted_line: ^2.0.1
-  flutter_contact: ^0.6.1
+  permission_handler: ^5.0.1+1
+  contacts_service: ^0.4.6
   flutter_datetime_picker: ^1.4.0
   shared_preferences: ^0.5.10
   flutter_spinkit: "^4.1.2"
+  firebase_storage: ^4.0.0
+  dash_chat: ^1.1.14
+  
+  
 
 dev_dependencies:
   flutter_test:
