--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   firebase_storage: ^4.0.0
   dash_chat: ^1.1.14
+  image_picker: ^0.6.7+7
+  image_cropper: ^1.3.1
+  path_provider: ^1.6.14
   
   
 
