--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.application">
+    package="com.example.application" xmlns:tools="http://schemas.android.com/tools">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
          <uses-permission android:name="android.permission.READ_CONTACTS" />  
-<uses-permission android:name="android.permission.WRITE_CONTACTS" /> 
+         <uses-permission android:name="android.permission.WRITE_CONTACTS" /> 
+         <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+         <uses-permission android:name="android.permission.INTERNET" />
+         <uses-permission android:name="android.permission.RECORD_AUDIO" />
+         <uses-permission android:name="android.permission.CAMERA" />
+         <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+        <!-- The Agora SDK requires Bluetooth permissions in case users are using Bluetooth devices.-->
+        <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
+    tools:replace="android:label"
         android:name="io.flutter.app.FlutterApplication"
         android:label="application"
         android:icon="@mipmap/ic_launcher">
