--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>NSContactsUsageDescription</key>  
-<string>Your description of why you are requesting permissions.</string>  
+
+    <key>NSContactsUsageDescription</key>  
+    <string>Your description of why you are requesting permissions.</string>  
+	<key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) MyApp needs access to your camera for meetings.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>$(PRODUCT_NAME) MyApp needs access to your microphone for meetings.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
