--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
   path_provider: ^1.6.14
+  circular_profile_avatar: ^1.0.6
+  jitsi_meet: ^0.4.0
+  
+  toast: ^0.1.5
   
   
 
