--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assests/images/Logos/IMG-20200821-WA0005(1).jpg
     - assests/images/Logos/
     - assests/images/
+    - assests/images/Logos/Sapphire_Meet_Logo-removebg.png
 
 
 
