--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
     tools:replace="android:label"
         android:name="io.flutter.app.FlutterApplication"
-        android:label="application"
+        android:label="Sapphire Meet"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
