--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,9 +46,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.application"
+        applicationId "com.sapphiremeet.sapphiremeet"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         multiDexEnabled true
 
         versionCode 1
