--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   contacts_service: ^0.4.6
   flutter_datetime_picker: ^1.4.0
-  shared_preferences: ^0.5.10
+  shared_preferences: '>=0.5.12<2.0.0'
   flutter_spinkit: "^4.1.2"
   firebase_storage: ^4.0.0
   dash_chat: ^1.1.14
@@ -45,7 +45,7 @@ dependencies:
   image_cropper: ^1.3.1
   path_provider: ^1.6.14
   circular_profile_avatar: ^1.0.6
-  jitsi_meet: ^0.4.0
+  jitsi_meet: ^0.4.2
   loading_overlay: ^0.2.1
   toast: ^0.1.5
   clipboard: ^0.1.2+8
