--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
   url_launcher: ^5.7.2
   flutter_simple_calculator: ^1.0.4
   share_extend: "^1.1.9"
-  audioplayers: ^0.16.1
+  just_audio: ^0.5.2
+
   
   
 
@@ -86,6 +87,9 @@ flutter:
     - assests/images/linkedin.png
     - assests/images/twitter.jpg
     - assests/images/logo.png
+    - assests/audio/send.wav
+    - assests/audio/rec.wav
+
 
 
 
