--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_simple_calculator: ^1.0.4
   share_extend: "^1.1.9"
   just_audio: ^0.5.2
+  flutter_gradient_colors: ^1.0.0
 
   
   
