--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   share_extend: "^1.1.9"
   just_audio: ^0.5.2
   flutter_gradient_colors: ^1.0.0
-
+  qr_code_scanner: ^0.2.1
+  
   
   
 
