--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,8 +51,8 @@ android {
         targetSdkVersion 29
         multiDexEnabled true
 
-        versionCode 7
-        versionName "1.5.1"
+        versionCode 8
+        versionName "2..0.0"
     }
      signingConfigs {
        release {
