--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         multiDexEnabled true
 
         versionCode 8
-        versionName "2..0.0"
+        versionName "2.0.0"
     }
      signingConfigs {
        release {
