--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
   implementation 'com.google.firebase:firebase-firestore:21.5.0'
+  implementation "com.google.firebase:firebase-messaging:21.0.1"
    implementation 'com.android.support:multidex:1.0.3'
 
 
