--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_gradient_colors: ^1.0.0
   qr_code_scanner: ^0.2.1
   adaptive_theme: ^1.1.0
+  firebase_messaging: ^7.0.3
+  http: ^0.12.2
   
   
   
