--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,10 @@ dependencies:
   shared_preferences: '>=0.5.12<2.0.0'
   flutter_spinkit: "^4.1.2"
   firebase_storage: ^4.0.0
-  dash_chat: ^1.1.14
+  dash_chat: ^1.1.15
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
-  path_provider: ^1.6.14
+  # path_provider: ^2.0.0
   circular_profile_avatar: ^1.0.6
   jitsi_meet: ^0.4.2
   loading_overlay: ^0.2.1
@@ -54,7 +54,7 @@ dependencies:
   url_launcher: ^5.7.2
   flutter_simple_calculator: ^1.0.4
   share_extend: "^1.1.9"
-  just_audio: ^0.5.2
+  just_audio: ^0.5.1
   flutter_gradient_colors: ^1.0.0
   qr_code_scanner: ^0.2.1
   adaptive_theme: ^1.1.0
